--- a/source/jade/component/_head.jade
+++ b/source/jade/component/_head.jade
@@ -6,6 +6,7 @@ head
 		title template
 
 	meta(name="viewport", content="width=device-width, initial-scale=1.0")
+	meta(name="format-detection", content="telephone=no")
 
 	link(rel="stylesheet", href="/css/normalize.css")
 
